4.03_03 0000-00-00 Duncan Ferguson <duncan_ferguson@user.sf.net>
- Force tests to have English locale when user has something else set (Github issue: 10) (thanks to Emanuele Tomasi)

4.03_02 2014-08-10 Duncan Ferguson <duncan_ferguson@user.sf.net>
- Fix behaviour when external cluster command is not defined or doesn't exist

4.03_01 2014-07-09 Duncan Ferguson <duncan_ferguson@user.sf.net>
- Amended host parsing to include alternative IPv6 address port definitions, e.g. 1::2::3::4/5567
- List available external tags with -L option and also add into 'Add Host' in UI
[NOTE: Some options have changed!]
- Rework options code

4.02_05 0000-00-00 Duncan Ferguson <duncan_ferguson@user.sf.net> (unreleased)
- Add in 'Set all active' and 'Set half active' host menu options (thanks to Andrew Stevenson)

4.02_04 2014-05-17 Duncan Ferguson <duncan_ferguson@user.sf.net>
- Amend 'Changes' file format to match CPAN specs (see CPAN::Changes)
- Correct autoclose short option to what is actually used (Github issue 4) (thanks to Simon Fraser)
- Fix 'use_all_a_records' option (Github issue: 5) (thanks to Simon Fraser)
- Fix 'title' option (thanks to Barry Roberts)
- Fix 'Add host or cluster' window to contain cluster names

4.02_03 2014-01-31 Duncan Ferguson <duncan_ferguson@user.sf.net>
- Fix 'File->Show History' (Sf support request 41)
- Amend 'tag-file' short option to 'r' to avoid option clash

4.02_02 2014-01-13 Duncan Ferguson <duncan_ferguson@user.sf.net>
- Fixed macros (%u, %s, %h, %n) not doing multiple replacements
- Add in key shortcut for username macro (ALT-u)
- Add in key shortcut for local hostname macro (ALT-l)
- Fix a bug with 'show history' key shortcut
- Fix "uninitialised errors in hash element" bug [clusterssh support-requests:#38]
- Fixed the default cluster not being opened
- Add in toggle for macros

4.02_01 2013-04-16 Duncan Ferguson <duncan_ferguson@user.sf.net>
- Refactured file loading code
- Add in 'tags' file handling